kubernetes/apps/valheim/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valheim
  namespace: valheim
  labels:
    app.kubernetes.io/name: valheim
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: valheim
  template:
    metadata:
      name: valheim
      labels:
        app.kubernetes.io/name: valheim
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
        - name: valheim
          image: ghcr.io/community-valheim-tools/valheim-server:1.3.0@sha256:c43502d3b28c8d341f5362f365deb4802018bda9fc49f98c7631b099f597eb49
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2456
              protocol: UDP
            - containerPort: 2457
              protocol: UDP
          readinessProbe:
            exec:
              command:
                - /bin/bash
                - -c
                - supervisorctl status valheim-server | awk '{print $2}' | grep -qi ^RUNNING$
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            requests:
              cpu: 700m
              memory: 3Gi
              ephemeral-storage: 1Gi
            limits:
              memory: 3Gi
              ephemeral-storage: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: valheim-plus-config
              mountPath: /config/valheimplus/valheim_plus.cfg
              subPath: valheim_plus.cfg
            - name: data
              mountPath: /opt/valheim
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: valheim-plus-config
          configMap:
            name: valheim-plus-config
        - name: data
          persistentVolumeClaim:
            claimName: data
