kubernetes/apps/valheim/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: valheim
  namespace: valheim
  annotations:
    metallb.io/address-pool: valheim
  labels:
    app.kubernetes.io/name: valheim
spec:
  type: ClusterIP
  ports:
    - name: "2456"
      port: 2456
      protocol: UDP
    - name: "2457"
      port: 2457
      protocol: UDP
  selector:
    app.kubernetes.io/name: valheim
