kubernetes/apps/valheim/app/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-game-server-connections
  namespace: valheim
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: valheim
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 2456
          protocol: UDP
        - port: 2457
          protocol: UDP
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
